Fix white border in dark mode in LTI (#230)
* Fix white border in dark mode in LTI

* Make sure correct logo is used in dark lti mode

* Make sure assignment settings are readable in dark theme

--- a/src/mixins.less
+++ b/src/mixins.less
@@ -103,6 +103,7 @@
 
         &:hover {
             background-color: @color-primary-darker;
+            color: @text-color-dark;
         }
 
     }
